# R-TYPE

./: .clang_complete  .env.example  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  initRepo.sh  pre-push
Client/: CMakeLists.txt
Client/include/: Client.hpp  ConfigurationManager.hpp  Engine.hpp  GUI.hpp  GUIElements.hpp  GUIManager.hpp  GameManagers.hpp  MapEngine.hpp  MultiplayerManager.hpp  NetworkManager.hpp  Resources.hpp  ResourcesManager.hpp  RessourcesManager.hpp  SceneManager.hpp  Ship.hpp  SoundManager.hpp  config.hpp
Client/include/ECS/Components/: Components.hpp
Client/include/ECS/Systems/: Animation.hpp  ClientSystems.hpp  Collision.hpp  Parallax.hpp  Render.hpp
Client/include/factory/: FactoryDeclaration.hpp  FactoryHeaders.hpp  FactoryMacros.hpp
Client/include/factory/Mobs/: AMobs.cpp  AMobs.hpp  MobFactory.hpp
Client/shared/: CMakeLists.txt  LobbyPlayer.cpp  LobbyPlayer.hpp
Client/shared/Attack/BasicAttack/: BasicAttack.cpp  BasicAttack.hpp
Client/shared/Attack/BombAttack/: BombAttack.cpp  BombAttack.hpp
Client/shared/Attack/MiniBombAttack/: MiniBombAttack.cpp  MiniBombAttack.hpp
Client/shared/IngameHUD/: IngameHUD.cpp  IngameHUD.hpp
Client/shared/LobbyPlayer/: LobbyPlayer.cpp  LobbyPlayer.hpp
Client/shared/Maps/: CMakeLists.txt  ILevels.hpp  MapEngine.cpp  MapEngine.hpp
Client/shared/Maps/KirbyMap/: KirbyMap.cpp  KirbyMap.hpp
Client/shared/Maps/KirbyMap/levels/: LevelOne.cpp  LevelOne.hpp  LevelThree.cpp  LevelThree.hpp  LevelTwo.cpp  LevelTwo.hpp
Client/shared/Mobs/Metallos/: Metallos.cpp  Metallos.hpp
Client/shared/Move/InverseSinusoideMove/: SinusoideMove.cpp  SinusoideMove.hpp
Client/shared/Move/SinusoideMove/: SinusoideMove.cpp  SinusoideMove.hpp
Client/shared/Move/StraightMove/: StraightMove.cpp  StraightMove.hpp
Client/shared/Move/UpAndDown/: UpAndDownMove.cpp  UpAndDownMove.hpp
Client/shared/Parallax/: Parallax.cpp  Parallax.hpp
Client/shared/Ressources/: BasicRessources.cpp  BasicRessources.hpp
Client/shared/StartPage/: StartPage.cpp  StartPage.hpp
Client/shared/StartScene/: StartScene.cpp  StartScene.hpp
Client/src/: Client.cpp  Engine.cpp  GUI.cpp  GUIElements.cpp  MapEngine.cpp  NetworkManager.cpp  Ship.cpp  main.cpp
Client/src/ECS/Systems/: Animation.cpp  Collision.cpp  Parallax.cpp  Render.cpp
Common/: common.cmake
Common/LibraryInterfaces/: IAttack.hpp  IEntityObject.hpp  IMap.hpp  IMob.hpp  IMove.hpp  IPart.hpp  IPowerUp.hpp  IRessources.hpp  IScene.hpp  IShipBlueprint.hpp  libraryinterfaces.cmake
Common/include/: EventManager.hpp  FindOS.hpp  RFC.hpp  ResourcesManager.hpp  Utils.hpp  mon_dirent.hpp
Common/include/Communication/: AsioSyncUdpNetwork.hpp  ICommunication.hpp  Packet.hpp  UDPPacket.hpp
Common/include/DynamicLibrary/: DynamicLibraryTypes.hpp  LibLoader.hpp
Common/include/ECS/: Component.hpp  Entity.hpp  Manager.hpp  Store.hpp  System.hpp
Common/include/ECS/Component/: Component.hpp
Common/include/ECS/Components/: CommonComponents.hpp  Stats.hpp
Common/include/ECS/System/: System.hpp
Common/include/ECS/Systems/: CleanupFrameCollisionComponents.hpp  Collision.hpp  CommonSystems.hpp  Health.hpp  Mouvement.hpp  SpriteCollisionHandler.hpp  SystemsPriotity.hpp
Common/include/Logger/: Logger.hpp
Common/src/Communication/: AsioSyncUdpNetwork.cpp  Packet.cpp  UDPPacket.cpp
Common/src/ECS/: Manager.cpp  Store.cpp  System.cpp
Common/src/ECS/System/: System.cpp
Common/src/ECS/Systems/: CleanupFrameCollisionComponents.cpp  Collision.cpp  Health.cpp  Mouvement.cpp  SpriteCollisionHandler.cpp
Common/src/Maps/Map1/: Map1.cpp  Map1.hpp
Common/src/Mobs/Mob1/: Mob1.cpp  Mob1.hpp
Server/: CMakeLists.txt
Server/include/: Client.hpp  Room.hpp  RoomManager.hpp  Server.hpp
Server/src/: Client.cpp  Room.cpp  RoomManager.cpp  Server.cpp  main.cpp
app/Http/Controllers/Auth/: RegisterController.php
common/components/include/: Component.hpp
common/components/src/: Component.cpp
common/config/: config.hpp  r-type01.h
common/systems/include/: System.hpp
common/systems/src/: System.cpp
config/: r-type001.h.in  r-type01.h.in
database/seeds/: DatabaseSeeder.php  DefaultUsersSeeder.php
git-temp-build/: CMakeCache.txt  Makefile  cmake_install.cmake
git-temp-build/Client/: Makefile  R-Type  cmake_install.cmake
git-temp-build/SFML/: Makefile  cmake_install.cmake
git-temp-build/SFML/lib/: libsfml-audio.so.2.4.2  libsfml-graphics.so.2.4.2  libsfml-network.so.2.4.2  libsfml-system.so.2.4.2  libsfml-window.so.2.4.2
git-temp-build/SFML/src/SFML/: Makefile  cmake_install.cmake
git-temp-build/SFML/src/SFML/Audio/: Makefile  cmake_install.cmake
git-temp-build/SFML/src/SFML/Graphics/: Makefile  cmake_install.cmake
git-temp-build/SFML/src/SFML/Network/: Makefile  cmake_install.cmake
git-temp-build/SFML/src/SFML/System/: Makefile  cmake_install.cmake
git-temp-build/SFML/src/SFML/Window/: Makefile  cmake_install.cmake
git-temp-build/Server/: Makefile  R-Type_server  cmake_install.cmake
git-temp-build/libs/Alfred/: AlfredBaseConfig.cmake  AlfredBase_TEST  CTestTestfile.cmake  Makefile  cmake_install.cmake
git-temp-build/libs/Alfred/test/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
git-temp-build/libs/Alfred/test/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
git-temp-build/libs/Alfred/test/googletest/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/: imgui.cmake
libs/imgui/: imconfig.h
macbuild/Server/: R-Type_server
macbuild/libs/Alfred/: AlfredBaseConfig.cmake  AlfredBase_TEST
routes/: api.php
server/: main.cpp
