cmake_minimum_required(VERSION 3.9)

if (CMAKE_BINARY_DIR STREQUAL CMAKE_SOURCE_DIR)
    message(FATAL_ERROR "Source and build directories cannot be the same.")
endif()

project(R-TYPE)
set(R-TYPE_VERSION_MAJOR 0)
set(R-TYPE_VERSION_MINOR 0)
set(R-TYPE_VERSION_PATCH 1)

if(MSVC)
    add_definitions(-DMSVC)
elseif(APPLE)
    add_definitions(-DAPPLE)
endif()

if (${DEBUG})
  message(STATUS "### DEBUG ON ###")
  set(DEBUG true)
else()
  set(DEBUG false)
endif()

configure_file(${CMAKE_SOURCE_DIR}/config/r-type001.h.in ${CMAKE_SOURCE_DIR}/Common/config/r-type001.h)

if (${SERVER_ONLY})
  message(STATUS "### BUILD R-TYPE SERVER ONLY ###")
  add_subdirectory(Server)
elseif (${CLIENT_ONLY})
  message(STATUS "### BUILD R-TYPE CLIENT ONLY ###")
  add_subdirectory(SFML)
  add_subdirectory(Client)
else()
  message(STATUS "### BUILD R-TYPE CLIENT AND SERVER ###")
  add_subdirectory(SFML)
  add_subdirectory(Server)
  add_subdirectory(Client)
endif()
